crates/isograph_lang_parser/fixtures/entrypoint-with-directives.output
Err(
    Diagnostic(
        DiagnosticData {
            message: "Error when deserializing.\n\ndata did not match any variant of untagged enum EntrypointDirectiveSet",
            location: Some(
                Embedded(
                    EmbeddedLocation {
                        text_source: TextSource {
                            current_working_directory: CurrentWorkingDirectory,
                            relative_path_to_source_file: RelativePathToSourceFile(
                                "crates/isograph_lang_parser/fixtures/entrypoint-with-directives.input.js",
                            ),
                            span: Some(
                                Span {
                                    start: 5,
                                    end: 30,
                                },
                            ),
                        },
                        span: Span {
                            start: 21,
                            end: 25,
                        },
                    },
                ),
            ),
            code_actions: [],
        },
    ),
)

Error when deserializing.

data did not match any variant of untagged enum EntrypointDirectiveSet
crates/isograph_lang_parser/fixtures/entrypoint-with-directives.input.js
entrypoint Type.Name @foo
                     ^^^^
---
