crates/isograph_lang_parser/fixtures/entrypoint-with-directives.input.js
iso(`entrypoint Type.Name @foo`);
